FreeST/test/Programs/ValidTests/Patterns/dupCases/dupCases.fst
data D = E

f : Bool
f =
  case E of {
    E -> True,
    E -> False
  }
