FreeST/test/Programs/InvalidTests/Kinding/nonSessionWithinSession/nonSessionWithinSession.fst
treeSum : &{Bud: Char} -> Bool
treeSum c = 5
